# ShecanDNSSetter

./: CHANGELOG.md  LICENSE  MANIFEST.in  PyQTSetter.py  README.en.md  ReadMe.md  adapter.py  dnsSetter.py  dns_cli.py  dns_service.py  main.py  main_window.py  privileges.py  providers.py  pyproject.toml  readme.md  swichDns.bat  switchDns v2.0.bat  tkinterSetter.py
