[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ── project metadata (PEP 621) ──────────────────────────────────────────────
[project]
name            = "dns-changer"
version         = "2.0.0"
description     = "Windows DNS manager for Iranian users — GUI + CLI"
readme          = "README.md"
license         = { text = "Apache-2.0" }
requires-python = ">=3.11"

authors = [
  { name = "Ali Sadeghi Aghili", email = "alisadeghiaghili@gmail.com" },
]

keywords = [
  "dns", "iran", "anti-sanction", "anti-filter",
  "shecan", "begzar", "network", "windows",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Name Service (DNS)",
  "Topic :: System :: Networking",
]

dependencies = [
  "PyQt5>=5.15",
  "WMI>=1.5",
  "rich>=13.0",
]

# ── optional dependency groups ──────────────────────────────────────────────
[project.optional-dependencies]
gui = ["PyQt5>=5.15"]
cli = ["rich>=13.0"]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

# ── console entry points ─────────────────────────────────────────────────────
[project.scripts]
dns-changer     = "dns_changer.main:main"
dns-changer-cli = "dns_changer.cli:main"

# ── project URLs ─────────────────────────────────────────────────────────────
[project.urls]
Homepage   = "https://github.com/alisadeghiaghili/ShecanDNSSetter"
Repository = "https://github.com/alisadeghiaghili/ShecanDNSSetter"
Changelog  = "https://github.com/alisadeghiaghili/ShecanDNSSetter/blob/main/CHANGELOG.md"
Issues     = "https://github.com/alisadeghiaghili/ShecanDNSSetter/issues"

# ── tool config ──────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
